# optimization_sql

./: district.csv  ingest_data.ipynb  orders.csv  pyproject.toml  оптимизация.sql
